--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,4 +6,4 @@ test:
 
 production:
   adapter: redis
-  url: redis:pub-redis-15147.us-east-1-3.4.ec2.garantiadata.com:15147
+  url: redis://localhost:6379/1
